Fix table icon alignment

--- a/frontend/src/components/table/Table.scss
+++ b/frontend/src/components/table/Table.scss
@@ -52,8 +52,7 @@
     }
 
     &.icon {
-      padding: 0 24px;
-      text-align: center;
+      padding: 0 2px;
     }
 
     &.actionDropdown {
